添加了美女照片

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=100%, initial-scale=1">
-        <title>与小饼聊天中</title>
+        <title>与饼哥聊天中</title>
         <link href="css/main.min.css" rel="stylesheet" type="text/css">
         <link rel="Shortcut Icon" href="favicon.ico"/>
         <link rel="preload" href="img/love-the-girl.jpg" as="image">
@@ -17,6 +17,15 @@
         <link rel="preload" href="img/foot.jpg" as="image">
         <link rel="preload" href="img/marry-me.png" as="image">
         <link rel="preload" href="img/kiss-my-princess.png" as="image">
+		<link rel="preload" href="img/littlebook-photo1.jpg" as="image">
+        <link rel="preload" href="img/littlebook-photo2.jpg" as="image">
+        <link rel="preload" href="img/littlebook-photo3.jpg" as="image">
+        <link rel="preload" href="img/play1.jpg" as="image">
+        <link rel="preload" href="img/play2.jpg" as="image">
+        <link rel="preload" href="img/play3.jpg" as="image">
+		<link rel="preload" href="img/food1.jpg" as="image">
+        <link rel="preload" href="img/food2.jpg" as="image">	
+        <link rel="preload" href="img/food4.jpg" as="image">
     </head>
     <body>
         <div id="mobile" :class="{ 'has-prompt': hasPrompt }">
